<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="6dp"
                android:paddingEnd="8dp"
                android:paddingStart="14dp"
                android:paddingTop="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/fingerprint_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_larger"/>

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/fingerprint_sub_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_normal"/>

    <RelativeLayout
        android:id="@+id/fingerprint_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sub_title"
        android:layout_marginTop="@dimen/spacing_normal">

        <ImageView
            android:id="@+id/fingerprint"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/fingerprint"/>

        <TextView
            android:id="@+id/touch_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_toEndOf="@+id/fingerprint"
            android:text="@string/fingerprint_touch_sensor"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_normal"/>

    </RelativeLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/fingerprint_container"
        android:background="@android:color/transparent"
        android:padding="@dimen/spacing_normal"
        android:text="@string/fingerprint_cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_large"/>

</RelativeLayout>