<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_normal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/status_fragment_header"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_huge"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        android:background="@drawable/edit_text_underline"
        android:imeOptions="actionDone"
        android:textColor="@color/black"
        android:inputType="textShortMessage"
        android:padding="@dimen/spacing_small"
        android:textSize="@dimen/font_large"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/spacing_small"
                android:text="@string/text_cancel"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/spacing_normal"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny"
            android:layout_weight="1"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/spacing_small"
                android:text="@string/text_ok"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/spacing_normal"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>