<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/sub_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sub_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/home_sub_header"
            android:textColor="@color/white"
            android:textSize="@dimen/font_larger"
            android:textStyle="bold"
            tools:visibility="visible"/>

        <ImageView
            android:id="@+id/filter_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:src="@drawable/ic_filter"/>

    </RelativeLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/sub_header_container"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:layout_marginStart="@dimen/spacing_normal"
        android:background="@color/gray_xlight"
        tools:visibility="visible"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/users_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/separator"
        android:background="@color/colorPrimary"
        tools:visibility="gone"/>

    <TextView
        android:id="@+id/no_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/separator"
        android:gravity="center"
        android:text="@string/home_no_results"
        android:textColor="@color/white"
        android:textSize="@dimen/spacing_large"
        android:textStyle="bold"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/header"
        android:animateLayoutChanges="true"
        android:background="@color/white"
        android:visibility="gone"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/close_filter_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/spacing_tiny"
            android:padding="@dimen/spacing_small"
            android:src="@drawable/ic_close"/>

        <TextView
            android:id="@+id/filter_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/close_filter_btn"
            android:layout_centerHorizontal="true"
            android:text="@string/home_filter_header"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_larger"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/labels_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter_header"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_normal"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">

            <Spinner
                android:id="@+id/role_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:background="@drawable/edit_text_underline"
                android:padding="@dimen/spacing_tiny"
                android:spinnerMode="dialog"/>

            <EditText
                android:id="@+id/skills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_small"
                android:background="@drawable/edit_text_underline"
                android:hint="@string/user_details_skills"
                android:inputType="text"
                android:padding="@dimen/spacing_tiny"
                android:paddingStart="@dimen/spacing_small"
                android:textColor="@color/black"
                android:textColorHint="@color/semi_black"
                android:textSize="@dimen/font_normal"/>

            <EditText
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_small"
                android:background="@drawable/edit_text_underline"
                android:hint="@string/home_filter_status"
                android:inputType="text"
                android:padding="@dimen/spacing_tiny"
                android:paddingStart="@dimen/spacing_small"
                android:textColor="@color/black"
                android:textColorHint="@color/semi_black"
                android:textSize="@dimen/font_normal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labels_container"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_normal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_tiny"
                android:layout_weight="1"
                android:background="@color/colorPrimary">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/home_filter_clear"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/spacing_normal"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_tiny"
                android:layout_weight="1"
                android:background="@color/colorPrimary">

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/home_filter_apply"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/spacing_normal"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:padding="@dimen/spacing_normal">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/user_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            app:civ_border_color="@color/white"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="@color/colorPrimary"
            app:civ_shadow_radius="2"
            tools:src="@drawable/uy"/>

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_toEndOf="@id/user_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/font_larger"
            android:textStyle="bold"
            tools:text="Hi Mathias Nunez!"/>

    </RelativeLayout>

</RelativeLayout>